--- a/src/pages/hu/jellemzok.astro
+++ b/src/pages/hu/jellemzok.astro
@@ -2,7 +2,7 @@
 import { changeLanguage } from "i18next";
 import Container from "@components/container.astro";
 import Layout from "@layouts/Layout.astro";
-changeLanguage("hu"); // Change the language to Hungarian
+changeLanguage("hu");
 ---
 
 <Layout lang="hu" title="ERPnext">
@@ -10,8 +10,8 @@ changeLanguage("hu"); // Change the language to Hungarian
 		<div class="px-5">
 			<div class="flex justify-between items-center h-[70vh]">
 				<div class="flex flex-col h-full justify-center">
-					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">A Monolithon a biztos alap.</h1>
-					<h2 class="text-xl text-gray-500 my-4">ERPNext és Frappe magyarul.</h2>
+					<h1 class="text-[60px] leading-none font-semibold text-[#192734]">Monolithon a biztos alap.</h1>
+					<h2 class="text-xl text-gray-500 my-4">ERPNext és Frappe angolul.</h2>
 					<a href="/contact">
 						<button class="md:px-3 md:py-2 leading-6 bg-[#2490EF] rounded-lg text-white w-28 h-12 text-xl">Beszéljünk!</button>
 					</a>
@@ -21,34 +21,34 @@ changeLanguage("hu"); // Change the language to Hungarian
 				</div>
 			</div>
 			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen valóban ingyenes és nyílt forráskódú, teljes körű vállalatirányítási rendszer.</h2>
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<ul class="list-disc ml-10 space-y-5 text-[#192734]">
 						<li>
-							Ha vállalatirányítási rendszert keresel, akkor jó helyen jársz, mert ezen az oldalon hamarosan részletesen bemutatjuk neked az ERPNext-ot.
+							Ha vállalatirányítási rendszert keresel, akkor jó helyen jársz, mert ezeken az oldalakon hamarosan részletesen bemutatjuk neked az ERPNext-et.
 						</li>
 						<li>
-							Ha meguntad a régi vállalatirányítási rendszerek kellemetlen emlékét, szerencséd van, mert az ERPNext egy modern szoftver, ami nem hasonlít a régi rendszerekre.
+							Ha hidegen ráz a gondolattól, hogy régi vállalatirányítási rendszerekre emlékeztető szoftvert kell használnod, akkor szerencsés vagy, mert az ERPNext modern szoftver, ami nem idézi fel a múlt kellemetlen emlékeit.
 						</li>
 						<li>
-							Ha nem tudod, hogy mi az az ERP, az ERPNext a következő pontra utal, és azt sugallja, hogy ez az egyik legmodernebb vállalati szoftver.
+							Ha nem tudod, hogy mi az az ERP, az ERPNext a következő pontra utal, ami azt sugallja, hogy az egyik legmodernebb üzleti szoftver.
 						</li>
 					</ul>
 				</section>
 
-				<section class="py-8 px-4 w-[45vw]">
-					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen valóban ingyenes és nyílt forráskódú, teljes körű vállalatirányítási rendszer.</h2>
+				<section class="py-8 px-4 md:w-[45vw]">
+					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<p class="list-disc text-[17px] leading-7 space-y-5 text-[#192734]">
-						Az ERPNext alapvetően egy vállalatirányítási szoftver, amely megkönnyíti és átláthatóvá teszi a vállalkozás mindennapi életét. De - csak egy funkciót kiemelve - akár több vállalat kezelésére is használható, ahol a vállalat akár egy személy is lehet. Így könnyen nyomon követhetők a különböző struktúrák közötti tranzakciók a rendszer segítségével. Például az ügyvezetői bér egyéni bevételként jelenik meg, de a vállalat költségeként. Így átláthatóvá válnak az egyéni és vállalati pénzügyek, és azok összekapcsolódása. Egy másik jó példa a személyes használatra a napi, alkalmi, ismétlődő projekt feladatok és teendők nyomon követése és kezelése az ERPNext rendszerben (amelyeknek szintén lehet bevételi vagy kiadási oldala). Az üzleti felhasználás mellett az ERPNext az egyszerű megoldást kínálja személyes felhasználásra is, pénzügyi vagy feladatokhoz kapcsolódó dokumentumok kezeléséhez, ami szintén könnyen megoldható az ERPNext rendszerben. Az ERPNext olyan problémákra nyújt egyszerű megoldást az élet minden területén, amelyekről folyamatosan tájékozódhatsz a magyar ERPNext weboldalon, itt a monolithon.com-on.
+						Az ERPNext alapvetően egy vállalatirányítási rendszer, ami megkönnyíti és átláthatóbbá teszi a vállalkozás mindennapjait. De - csak egy funkciót említve - akár több vállalat egyidejű kezelésére is használható, ahol a vállalat akár egy személy is lehet. Így könnyen követhetők az eltérő struktúrák közötti tranzakciók a rendszer segítségével. Például a vezetői bér költséget jelenthet egyénnek, de bevételt a vállalat számára. Így átláthatóvá válnak a személyes és vállalati pénzügyek és azok összekapcsolódása. De egy másik jó példa a személyes felhasználásra a napi, alkalmi, visszatérő projektfeladatok és tevékenységek követése és kezelése (amelyeknek szintén lehetnek bevétel vagy kiadási oldala). A vállalati felhasználás mellett az ERPNext a személyes használathoz is nélkülözhetetlen, amikor a pénzügyekkel vagy feladatokkal kapcsolatos dokumentumok kezeléséről van szó, amit az ERPNext rendszerben könnyedén meg lehet tenni. Néhány problémára pedig egyszerű megoldást kínál az ERPNext az élet minden területén. Az egyéb ERPNext által lefedett területek és működésük folyamatosan megjelennek a magyar ERPNext weboldalon, itt a monolithon.com-on.
 					</p>
 				</section>
 
 				<section class="py-8 items-center px-4 bg-[#EEF0F2] rounded-xl flex justify-between w-full">
 					<div>
-						<h2 class="my-3 text-[30px] text-[#192734] font-bold">Nem kell több vállalatirányítási szoftver.</h2>
-						<span class="text-[#192734]">Az ERPNext a stabil alap.</span>
+						<h2 class="my-3 text-[30px] text-[#192734] font-bold">Nem kell több üzleti irányítási szoftver.</h2>
+						<span class="text-[#192734]">Az ERPNext az erős alap.</span>
 					</div>
-					<a href="/contact" class="cursor-pointer text-2xl font-semibold text-gray-700">Beszéljünk! > </a>
+					<a href="/contact" class=" cursor-pointer text-2xl font-semibold text-gray-700" >Beszéljünk! > </a>
 				</section>
 			</div>
 		</div>
