--- a/src/components/erpnext/MainERPNext.astro
+++ b/src/components/erpnext/MainERPNext.astro
@@ -2,9 +2,9 @@
 
 ---
 <div class="flex flex-col items-center">
-    <section class="py-8 px-4 w-[45vw]">
+    <section class="py-8 px-4 md:w-[45vw]">
         <h2 class="font-bold text-3xl mb-10 text-[#192734]">ERPNext is the only truly free and open source, complete ERP</h2>
-        <ul class="list-disc ml-10 space-y-5 text-[#192734]">
+        <ul class="list-disc md:ml-10 space-y-5 text-[#192734]">
             <li>
                 If you are looking for ERP, then you are in the right place, because on these pages we will soon introduce you to ERPNext
                 in detail.
