--- a/src/pages/hu/erpnext.astro
+++ b/src/pages/hu/erpnext.astro
@@ -20,8 +20,8 @@ changeLanguage("hu");
 					<img class="w-[40vw]" src="../../../public/erpnextImage.png" alt="" />
 				</div>
 			</div>
-			<div class="flex flex-col items-center">
-				<section class="py-8 px-4 w-[45vw]">
+			<div class="flex flex-col bg-blue-700 items-center">
+				<section class="py-8 px-4 bg-red-500 md:w-[45vw]">
 					<h2 class="font-bold text-3xl mb-10 text-[#192734]">Az ERPNext az egyetlen igazán ingyenes és nyílt forráskódú teljes körű vállalatirányítási rendszer</h2>
 					<ul class="list-disc ml-10 space-y-5 text-[#192734]">
 						<li>
