fix contact bug

--- a/src/pages/hu/contact.astro
+++ b/src/pages/hu/contact.astro
@@ -1,11 +1,9 @@
 ---
 import { changeLanguage } from "i18next";
-import { Icon } from "astro-icon";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
 import Button from "@components/ui/button.astro";
-import Contactform from "@components/contactform.astro";
 
 changeLanguage("hu");
 
@@ -33,7 +31,7 @@ let contacts = [
 ];
 ---
 
-<Layout title="Contact">
+<Layout title="Contact" lang="hu">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Contact</Fragment>
