--- a/src/pages/hu/invoicing.astro
+++ b/src/pages/hu/invoicing.astro
@@ -9,7 +9,7 @@ changeLanguage("hu");
 <Layout lang="en" title="ERPnext">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Monolithon</h1>
+			<h1 class=" text-3xl">Incoicing</h1>
 		</div>
 	</Container>
 </Layout>
