--- a/src/pages/hu/contact.astro
+++ b/src/pages/hu/contact.astro
@@ -1,5 +1,6 @@
 ---
 import { changeLanguage } from "i18next";
+import { Icon } from "astro-icon";
 import Layout from "@layouts/Layout.astro";
 import Container from "@components/container.astro";
 import Sectionhead from "@components/sectionhead.astro";
@@ -31,11 +32,11 @@ let contacts = [
 ];
 ---
 
-<Layout title="Contact" lang="hu">
+<Layout title="Contact" lang="en">
 	<Container>
 		<Sectionhead>
 			<Fragment slot="title">Contact</Fragment>
-			<Fragment slot="desc">We are a here to help.</Fragment>
+			<Fragment slot="desc">Get in Touch.</Fragment>
 		</Sectionhead>
 
 		<div class="py-24 sm:py-32">
