Fix category link | fix back to blog

--- a/src/pages/[...blog]/index.astro
+++ b/src/pages/[...blog]/index.astro
@@ -74,7 +74,7 @@ const readTime = getArticleReadingTime(entry?.body);
 			<Content />
 		</div>
 		<div class="mx-auto mt-20">
-			<a href={localizePath("/blog")}>
+			<a href={localizePath("/")}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
 					<Icon name="tabler:chevron-left" class="w-6 h-6" />
 					<p class="ml-2">Back to blog</p>
