--- a/src/pages/hu/[...blog]/[category]/[...page].astro
+++ b/src/pages/hu/[...blog]/[category]/[...page].astro
@@ -32,7 +32,7 @@ export async function getStaticPaths({ paginate }) {changeLanguage('hu')
 const { page, category } = Astro.props;
 ---
 
-<Layout title="Blog" lang="en">
+<Layout title="Blog" lang="hu">
   <Container>
     <Sectionhead>
       <Fragment slot="title">#{category}</Fragment>
