--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -14,7 +14,7 @@ export async function getStaticPaths() {changeLanguage('hu')
     const blogEntries = await getCollection("blog");
     return blogEntries.map((entry) => {
         let slug: any = entry?.slug;
-        if (i18next.language == "en" && slug.startsWith("en/")) {
+        if (i18next.language == "hu" && slug.startsWith("hu/")) {
             slug = slug.substring(3);
         }
         return {
@@ -74,7 +74,7 @@ const readTime = getArticleReadingTime(entry?.body);
 			<Content />
 		</div>
 		<div class="mx-auto mt-20">
-			<a href={localizePath("/blog")}>
+			<a href={localizePath("/")}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
 					<Icon name="tabler:chevron-left" class="w-6 h-6" />
 					<p class="ml-2">Back to blog</p>
