--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -20,25 +20,28 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 	const categories = {
 		hír: "news",
 		news: "hír",
-		"telepítés-és-beállításs":"how-to",
-		"how-to":"telepítés-és-beállításs"
+		"telepítés-és-beállításs": "how-to",
+		"how-to": "telepítés-és-beállításs",
 	};
-	const tags = {
+	const tag = {
 		hír: "news",
+		news: "hír",
+		"telepítés-és-beállításs": "how-to",
+		"how-to": "telepítés-és-beállításs",
 	};
 	const blog = {
 		hír: "news",
 		news: "hír",
-		"how-to-fix-incorrect-product-valuation-in-erpnext":"raktárkészlet-és-termékérték-javítása-erpnextben",
-		"raktárkészlet-és-termékérték-javítása-erpnextben":"how-to-fix-incorrect-product-valuation-in-erpnext"
+		"how-to-fix-incorrect-product-valuation-in-erpnext": "raktárkészlet-és-termékérték-javítása-erpnextben",
+		"raktárkészlet-és-termékérték-javítása-erpnextben": "how-to-fix-incorrect-product-valuation-in-erpnext",
 	};
 	const links = {
 		implementation: "uzemeltetes",
 		invoicing: "szamlazas",
 		accounting: "konyveles",
-		szamlazas:"invoicing",
-		uzemeltetes:"implementation",
-		konyveles:"accounting",
+		szamlazas: "invoicing",
+		uzemeltetes: "implementation",
+		konyveles: "accounting",
 		bejelentkezés: "login",
 		monolithon: "monolithon",
 		szoftverek: "softwares",
@@ -57,14 +60,33 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 	languageSelector.addEventListener("change", function () {
 		if (window.location.pathname.startsWith("/hu/category")) {
 			const param = window.location.pathname.split("/hu/category")[1].substring(1);
-			console.log(param);
 			const prams = categories[decodeURIComponent(param)];
-			console.log(prams);
 			const url = window.location.pathname.replace(param, prams).replace("/hu", "");
 			window.location.href = url;
 		} else if (window.location.pathname.startsWith("/category")) {
 			const param = window.location.pathname.split("/category")[1].substring(1);
 			const prams = categories[param];
+			const url = window.location.pathname.replace(param, prams);
+			window.location.href = `/hu${url}`;
+		} else if (window.location.pathname.startsWith("/hu/tag")) {
+			const param = window.location.pathname.split("/hu/tag")[1].substring(1);
+			const prams = tag[decodeURIComponent(param)];
+			const url = window.location.pathname.replace(param, prams).replace("/hu", "");
+			window.location.href = url;
+		} else if (window.location.pathname.startsWith("/tag")) {
+			const param = window.location.pathname.split("/tag")[1].substring(1);
+			const prams = tag[param];
+			const url = window.location.pathname.replace(param, prams);
+			window.location.href = `/hu${url}`;
+		} else if (!window.location.pathname[1]) {
+			const param = window.location.pathname.split("/")[1];
+			const prams = blog[param];
+			if (!prams) {
+				const prams = links[param];
+				if (!prams) return;
+				const url = window.location.pathname.replace(param, prams);
+				return (window.location.href = `/hu${url}`);
+			}
 			const url = window.location.pathname.replace(param, prams);
 			window.location.href = `/hu${url}`;
 		} else if (window.location.pathname.startsWith("/hu")) {
@@ -78,30 +100,6 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 			}
 			const url = window.location.pathname.replace(param, prams).replace("/hu", "");
 			window.location.href = url;
-		} else if (window.location.pathname.startsWith("/")) {
-			const param = window.location.pathname.split("/")[1];
-			console.log(window.location.pathname.split("/")[1]);
-			const prams = blog[param];
-			if (!prams) {
-				const prams = links[param];
-				if (!prams) return;
-				const url = window.location.pathname.replace(param, prams);
-				return (window.location.href = `/hu${url}`);
-			}
-			const url = window.location.pathname.replace(param, prams);
-			window.location.href = `/hu${url}`;
-		}else if (window.location.pathname.startsWith("/hu/tag")) {
-			const param = window.location.pathname.split("/hu/tag")[1].substring(1);
-			console.log(param);
-			const prams = tags[decodeURIComponent(param)];
-			console.log(prams);
-			const url = window.location.pathname.replace(param, prams).replace("/hu", "/tag");
-			window.location.href = url;
-		} else if (window.location.pathname.startsWith("/tag")) {
-			const param = window.location.pathname.split("/tag")[1].substring(1);
-			const prams = tags[param];
-			const url = window.location.pathname.replace(param, prams);
-			window.location.href = `/hu/tag${url}`;
-		} 
+		}
 	});
 </script>
