Create all posts

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -68,7 +68,44 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 		"erpnext-conference-2022-organized-by-the-frappe-team":"erpnext-konferencia-2022-a-frappe-csapat-szervezésében",
 		"erpnext-weboldal-google-indexelése":"indexing-the-erpnext-website-on-google",
 		"indexing-the-erpnext-website-on-google":"erpnext-weboldal-google-indexelése",
-
+		"mnb-árfolyamok-erpnext-rendszerben":"mnb-exchange-rates-erpnext-system",
+		"mnb-exchange-rates-erpnext-system":"mnb-árfolyamok-erpnext-rendszerben",
+		"erpnext-google-calendar":"erpnext-google-naptar",
+		"erpnext-google-naptar":"erpnext-google-calendar",
+		"erpnext-14-megjelenés":"erpnext-14-appearance",
+		"erpnext-14-appearance":"erpnext-14-megjelenés",
+		"erpnext-ticketing-megoldások":"erpnext-ticketing-solutions",
+		"erpnext-ticketing-solutions":"erpnext-ticketing-megoldások",
+		"erpnext-chat-megoldások":"erpnext-chat-solutions",
+		"erpnext-chat-solutions":"erpnext-chat-megoldások",
+		"erpnext-gdrp-és-cookie-azaz-süti-kezelés":"erpnext-gdpr-and-cookie-management",
+		"erpnext-gdpr-and-cookie-management":"erpnext-gdrp-és-cookie-azaz-süti-kezelés",
+		"erpnext-magyar-tudásbázis":"erpnext_knowledge_base",
+		"erpnext_knowledge_base":"erpnext-magyar-tudásbázis",
+		"a-14-es-verzió-első-új-funkicója":"the-first-new-feature-of-erpnext-14",
+		"the-first-new-feature-of-erpnext-14":"a-14-es-verzió-első-új-funkicója",
+		"year-end-task-managing-exchange-rates-in-erpnext":"év-eleji-teendő-árfolyamok-kezelése-az-erpnextben",
+		"év-eleji-teendő-árfolyamok-kezelése-az-erpnextben":"year-end-task-managing-exchange-rates-in-erpnext",
+		"wiki-like-pages-wanted":"wiki-szerű-oldalakat-szeretnék",
+		"wiki-szerű-oldalakat-szeretnék":"wiki-like-pages-wanted",
+		"az-erpnext":"the-erpnext",
+		"the-erpnext":"az-erpnext",
+		"erpnext-conference-2021-november-19-20":"erpnext-konferencia-2021-november-19-20",
+		"erpnext-konferencia-2021-november-19-20":"erpnext-conference-2021-november-19-20",
+		"erpnext-és-az-új-shopify-ecommerce-integráció-webáruházakhoz":"erpnext-and-the-new-shopify-ecommerce-integration-for-webshops",
+		"erpnext-and-the-new-shopify-ecommerce-integration-for-webshops":"erpnext-és-az-új-shopify-ecommerce-integráció-webáruházakhoz",
+		"data-synchronization-made-easy-with-erpnexts-data-import-functionality":"adatszinkronizálás-egyszerűen-az-erpnext-adatimport-funkciójának-érdekességei",
+		"adatszinkronizálás-egyszerűen-az-erpnext-adatimport-funkciójának-érdekességei":"data-synchronization-made-easy-with-erpnexts-data-import-functionality",
+		"form-creation-with-erpnext":"űrlapkészítés-erpnexttel",
+		"űrlapkészítés-erpnexttel":"form-creation-with-erpnext",
+		"woocommerce-erpnext-integration":"woocommerce-erpnext-integráció",
+		"woocommerce-erpnext-integráció":"woocommerce-erpnext-integration",
+		"published-by-erpnext-13":"megjelent-az-erpnext-13",
+		"megjelent-az-erpnext-13":"published-by-erpnext-13",
+		"native-android-ios-app-coming":"natív-android-ios-app-érkezik",
+		"natív-android-ios-app-érkezik":"native-android-ios-app-coming",
+		"erpnext-130-version-gets-a-new-look":"új-kinézetet-kap-az-erpnext-130-verzió.png",
+		"új-kinézetet-kap-az-erpnext-130-verzió.png":"erpnext-130-version-gets-a-new-look",
 	}
 	const links = {
 		implementation: "uzemeltetes",
