--- a/src/components/blog/pagination.astro
+++ b/src/components/blog/pagination.astro
@@ -20,15 +20,19 @@ const { prevUrl, nextUrl, prevText = "blog.prev", nextText = "blog.next", class:
 		<div class:list={["container flex", className]}>
 			<div class="flex flex-row mx-auto container justify-center gap-8">
 				<Link href={localizePath(prevUrl)} style="muted" class={`${!prevUrl ? "invisible" : ""}`}>
-					<div class="flex flex-row align-middle">
-						<Icon name="tabler:chevron-left" class="w-6 h-6" />
-						<p class="ml-2">{t(prevText)}</p>
+					<div class="flex flex-row align-middle items-center">
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 12 12"><g transform="rotate(180 6 6)"><path fill="currentColor" d="M4.7 10c-.2 0-.4-.1-.5-.2c-.3-.3-.3-.8 0-1.1L6.9 6L4.2 3.3c-.3-.3-.3-.8 0-1.1c.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"/></g></svg>						<p class="ml-2">{t(prevText)}</p>
 					</div>
 				</Link>
 				<Link href={localizePath(nextUrl)} style="muted" class={`${!nextUrl ? "invisible" : ""}`}>
-					<div class="flex flex-row align-middle">
+					<div class="flex flex-row align-middle items-center">
 						<span class="mr-2">{t(nextText)}</span>
-						<Icon name="tabler:chevron-right" class="w-6 h-6" />
+						<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 12 12">
+							<path
+								fill="currentColor"
+								d="M4.7 10c-.2 0-.4-.1-.5-.2c-.3-.3-.3-.8 0-1.1L6.9 6L4.2 3.3c-.3-.3-.3-.8 0-1.1c.3-.3.8-.3 1.1 0l3.3 3.2c.3.3.3.8 0 1.1L5.3 9.7c-.2.2-.4.3-.6.3Z"
+							/>
+						</svg>
 					</div>
 				</Link>
 			</div>
