--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -41,8 +41,9 @@ export async function getStaticPaths({ paginate }) {
         pageSize: 4,
     });
 }
-const page = localizedPosts;
+const page = localizedPosts.filter(post=>post.data.category.includes('news'))
 ---
+
 
 <Layout title="Blog" lang="en">
 	<Container>
