--- a/src/pages/knowledge.astro
+++ b/src/pages/knowledge.astro
@@ -1,15 +1,57 @@
 ---
-import { changeLanguage } from "i18next";
-import Container from "@components/container.astro";
+import i18next, { changeLanguage } from "i18next";
+import { getCollection } from "astro:content";
 import Layout from "@layouts/Layout.astro";
+import Container from "@components/container.astro";
+import Posts from "@components/blog/posts.astro";
+import Sectionhead from "@components/sectionhead.astro";
+import Pagination from "@components/blog/pagination.astro";
 
 changeLanguage("en");
+
+const allPosts = async () => {
+    var posts = await getCollection("blog", ({ data }) => {
+        return !data.draft;
+    });
+    // Preprocess the posts to split the slugs and get the languages
+    var processedPosts = posts.map((post) => {
+        const [...slug] = post.slug.split("/");
+        let lang = i18next.language;
+        var firstSlug = post.slug.match(/^([^\/]*)\//);
+        if (firstSlug) {
+            lang = firstSlug[1];
+        }
+        return {
+            ...post,
+            slug: slug.join("/"),
+            lang: lang,
+        };
+    });
+    // Filter posts based on the current language
+    const localizedPosts = processedPosts.filter((post) => post.lang === i18next.language);
+    localizedPosts.sort(function (a, b) {
+        return b.data.publishDate.valueOf() - a.data.publishDate.valueOf();
+    });
+    return localizedPosts;
+};
+const localizedPosts = await allPosts();
+export async function getStaticPaths({ paginate }) {
+    return paginate(localizedPosts, {
+        params: { blog: "blog" || undefined },
+        pageSize: 4,
+    });
+}
+const page = localizedPosts.filter(post=>post.data.category.includes('How-to'))
 ---
 
-<Layout lang="en" title="ERPnext">
+
+<Layout title="Blog" lang="en">
 	<Container>
-		<div class=" h-[60vh] flex items-center justify-center">
-			<h1 class=" text-3xl">Knowledge</h1>
-		</div>
+		<Sectionhead>
+			<Fragment slot="title">ERPNext and frappe news</Fragment>
+			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
+		</Sectionhead>
+		<Posts posts={page} />
+		<!-- <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} /> -->
 	</Container>
 </Layout>
