--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -74,10 +74,10 @@ const readTime = getArticleReadingTime(entry?.body);
 			<Content />
 		</div>
 		<div class="mx-auto mt-20">
-			<a href={localizePath("/")}>
+			<a href={localizePath(`/category/${entry?.data.category[0].toLowerCase()}`)}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
 					<Icon name="tabler:chevron-left" class="w-6 h-6" />
-					<p class="ml-2">Back to blog</p>
+					<p class="ml-2">Back to category</p>
 				</div>
 			</a>
 		</div>
