translate header on categories

--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -20,14 +20,14 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 	const categories = {
 		hír: "news",
 		news: "hír",
-		"telepítés-beállítás":"how-to",
-		"how-to":"telepítés-beállítás",
+		"telepítés-és-beállítás":"how-to",
+		"how-to":"telepítés-és-beállítás",
 	};
 	const tag = {
 		hír: "news",
 		news: "hír",
-		"telepítés-beállítás":"how-to",
-		"how-to":"telepítés-beállítás",
+		"telepítés-és-beállítás":"how-to",
+		"how-to":"telepítés-és-beállítás",
 	};
 	const blog = {
 		hír: "news",
