--- a/src/pages/hu/index.astro
+++ b/src/pages/hu/index.astro
@@ -47,8 +47,8 @@ const page = localizedPosts.filter(post=>post.data.category.includes('hír'))
 <Layout title="Blog" lang="en">
 	<Container>
 		<Sectionhead>
-			<Fragment slot="title">ERPNext and frappe news</Fragment>
-			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
+			<Fragment slot="title">ERPNext and frappe hírek</Fragment>
+			<Fragment slot="desc">ERPNext és Frappe hírek mindenkinek.</Fragment>
 		</Sectionhead>
 		<Posts posts={page} />
 		<!-- <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} /> -->
