--- a/src/pages/knowledge.astro
+++ b/src/pages/knowledge.astro
@@ -48,8 +48,8 @@ const page = localizedPosts.filter(post=>post.data.category.includes('How-to'))
 <Layout title="Blog" lang="en">
 	<Container>
 		<Sectionhead>
-			<Fragment slot="title">ERPNext and frappe news</Fragment>
-			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
+			<Fragment slot="title">ERPNext and Frappe Knowledgebase</Fragment>
+			<Fragment slot="desc">ERPNext and Frappe how-to from beginners to advance users.</Fragment>
 		</Sectionhead>
 		<Posts posts={page} />
 		<!-- <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} /> -->
