--- a/src/pages/hu/tudasbazis.astro
+++ b/src/pages/hu/tudasbazis.astro
@@ -41,14 +41,14 @@ export async function getStaticPaths({ paginate }) {
         pageSize: 4,
     });
 }
-const page = localizedPosts.filter(post=>post.data.category.includes('telepítés-beállítás'))
+const page = localizedPosts.filter(post=>post.data.category.includes('telepítés-és-beállítás'))
 ---
 
 <Layout title="Blog" lang="en">
 	<Container>
 		<Sectionhead>
-			<Fragment slot="title">ERPNext and frappe news</Fragment>
-			<Fragment slot="desc">ERPNext and Frappe news for beginners and advanced users.</Fragment>
+			<Fragment slot="title">ERPNext és Frappe tudásbázis magyarul</Fragment>
+			<Fragment slot="desc">ERPNext és Frappe tippek és trükkök: telepítés és beállítás magyarul.</Fragment>
 		</Sectionhead>
 		<Posts posts={page} />
 		<!-- <Pagination class="mt-20" prevUrl={page.url.prev} nextUrl={page.url.next} /> -->
