Create all How-to posts

--- a/src/pages/knowledge.astro
+++ b/src/pages/knowledge.astro
@@ -41,7 +41,7 @@ export async function getStaticPaths({ paginate }) {
         pageSize: 4,
     });
 }
-const page = localizedPosts.filter(post=>post.data.category.includes('How-to'))
+const page = localizedPosts.filter(post=>post.data.category.includes('how-to'))
 ---
 
 
