--- a/src/components/languageselector.astro
+++ b/src/components/languageselector.astro
@@ -104,7 +104,29 @@ const { icon = "", languageMapping = { en: "English", hu: "Magyar " }, ...rest }
 		"natív-android-ios-app-érkezik":"native-android-ios-app-coming",
 		"erpnext-130-version-gets-a-new-look":"új-kinézetet-kap-az-erpnext-130-verzió.png",
 		"új-kinézetet-kap-az-erpnext-130-verzió.png":"erpnext-130-version-gets-a-new-look",
-	}
+		"how-to-use-downloadable-documents-in-erpnext-email-templates":"letölthető-dokumentum-használata-erpnext-email-sablonban",
+		"letölthető-dokumentum-használata-erpnext-email-sablonban":"how-to-use-downloadable-documents-in-erpnext-email-templates",
+		"custom-print-formats-and-translations-in-erpnext":"számlakép-és-egyéb-nyomtatási-nézetek-és-fordítások-erpnext-ben",
+		"számlakép-és-egyéb-nyomtatási-nézetek-és-fordítások-erpnext-ben":"custom-print-formats-and-translations-in-erpnext",
+		"analytical-accounting-cost-centers-and-profit-centers-in-erpnext":"analitikus-könyvelés-költséghelyek-és-profitcenterek",
+		"analitikus-könyvelés-költséghelyek-és-profitcenterek":"analytical-accounting-cost-centers-and-profit-centers-in-erpnext",
+		"disposal-in-the-erpnext-system":"selejtezés-erpnext-rendszerben",
+		"selejtezés-erpnext-rendszerben":"disposal-in-the-erpnext-system",
+		"importing-master-data-into-erpnext":"alapadatok-importálása-erpnext-be",
+		"alapadatok-importálása-erpnext-be":"importing-master-data-into-erpnext",
+		"periodic-or-real-time-inventory-valuation-in-erpnext":"periódikus-vagy-valós-idejű-készletérték-könyvelés-erpnext-rendszerben",
+		"periódikus-vagy-valós-idejű-készletérték-könyvelés-erpnext-rendszerben":"periodic-or-real-time-inventory-valuation-in-erpnext",
+		"closing-a-manufacturing-order-with-less-quantity-produced-in-erpnext":"rendeltnél-kevesebb-gyártás-lezárása-erpnext-rendszerben",
+		"rendeltnél-kevesebb-gyártás-lezárása-erpnext-rendszerben":"closing-a-manufacturing-order-with-less-quantity-produced-in-erpnext",
+		"manufacturing-more-products-than-planned-in-erpnext":"rendeltnél-több-termék-gyártása-erpnext-rendszerben",
+		"rendeltnél-több-termék-gyártása-erpnext-rendszerben":"manufacturing-more-products-than-planned-in-erpnext",
+		"inventory-valuation-in-erpnext-system":"készletértékelésről-röviden-az-erpnext-rendszerben",
+		"készletértékelésről-röviden-az-erpnext-rendszerben":"inventory-valuation-in-erpnext-system",
+		"correcting-warehouse-stock-and-product-valuation-in-erpnext":"raktárkészlet-és-termékérték-javítása",
+		"raktárkészlet-és-termékérték-javítása":"raktárkészlet-és-termékérték-javítása",
+		
+	}	
+
 	const links = {
 		implementation: "uzemeltetes",
 		invoicing: "szamlazas",
