--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -77,7 +77,7 @@ const readTime = getArticleReadingTime(entry?.body);
 			<a href={localizePath(`/category/${entry?.data.category[0].toLowerCase()}`)}>
 				<div class="flex flex-row align-middle justify-center dark:text-stone-200">
 					<Icon name="tabler:chevron-left" class="w-6 h-6" />
-					<p class="ml-2">Back to category</p>
+					<p class="ml-2">Vissza a kategóriához</p>
 				</div>
 			</a>
 		</div>
