--- a/src/pages/hu/[...blog]/[tag]/[...page].astro
+++ b/src/pages/hu/[...blog]/[tag]/[...page].astro
@@ -35,9 +35,9 @@ const { page, tag } = Astro.props;
 <Layout title="Blog" lang="en">
   <Container>
     <Sectionhead>
-      <Fragment slot="title">#{tag}</Fragment>
+      <Fragment slot="title">#ERPNext és Frappe {tag.replace(/-/g, " ")}</Fragment>
       <Fragment slot="desc">
-        We write about building startups and thoughts going on our mind.
+        ERPNext és Frappe {tag.replace(/-/g, " ")} mindenkinek.
       </Fragment>
     </Sectionhead>
     <Posts posts={page.data} />
