--- a/src/pages/hu/[...blog]/index.astro
+++ b/src/pages/hu/[...blog]/index.astro
@@ -37,7 +37,7 @@ const readTime = getArticleReadingTime(entry?.body);
 				<a
 				href={localizePath(`/category/${cat?.toLowerCase()}`)}
 				class="text-blue-400 dark:text-stone-400 uppercase tracking-wider text-sm font-medium no-underline">
-				{cat}
+				{cat.replace(/-/g, " ")}
 			</a>
 				))
 			}
@@ -49,7 +49,7 @@ const readTime = getArticleReadingTime(entry?.body);
 					{
 						entry?.data.tags.map((tag) => (
 							<a href={localizePath(`/tag/${tag}`)} class="text-sm text-gray-500 dark:text-stone-300">
-								#{tag}
+								#{tag.replace(/-/g, " ")}
 							</a>
 						))
 					}
