--- a/src/pages/hu/monolithon.astro
+++ b/src/pages/hu/monolithon.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="en" title="ERPnext">
+<Layout lang="en" title="Monolithon">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
 			<h1 class=" text-3xl">Monolithon</h1>
