--- a/src/pages/hu/szamlazas.astro
+++ b/src/pages/hu/szamlazas.astro
@@ -6,7 +6,7 @@ import Layout from "@layouts/Layout.astro";
 changeLanguage("hu");
 ---
 
-<Layout lang="hu" title="ERPnext">
+<Layout lang="hu" title="Számlázás">
 	<Container>
 		<div class=" h-[60vh] flex items-center justify-center">
 			<h1 class=" text-3xl">Számlázás</h1>
